# servicenow-mcp1

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  project_analysis.md  pyproject.toml  requirements.txt  servicenow-mcp.py
.github/workflows/: python-package.yml
mcp_server_servicenow/: __init__.py  cli.py  nlp.py  server.py
tests/: test_nlp.py
